--- a/release.properties
+++ b/release.properties
@@ -1,18 +1,18 @@
 #release configuration
-#Thu Dec 18 14:59:51 CET 2014
-project.dev.org.komea.jiraclient\:jira-client=0.6.1-SNAPSHOT
+#Thu Dec 18 15:50:39 CET 2014
+project.dev.org.komea.jiraclient\:jira-client=0.6.2-SNAPSHOT
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=jira-client-0.6.0
+scm.tag=jira-client-0.6.1
 pushChanges=true
-scm.url=scm\:git\:git@github.com\:RaphaelTocea/org-komea-jiraclient.git
+scm.url=scm\:git\:git@github.com\:RaphaelTocea/jira-client.git
 preparationGoals=clean verify
-project.scm.org.komea.jiraclient\:jira-client.developerConnection=scm\:git\:git@github.com\:RaphaelTocea/org-komea-jiraclient.git
+project.scm.org.komea.jiraclient\:jira-client.developerConnection=scm\:git\:git@github.com\:RaphaelTocea/jira-client.git
 project.scm.org.komea.jiraclient\:jira-client.tag=HEAD
-project.scm.org.komea.jiraclient\:jira-client.url=https\://github.com/RaphaelTocea/org-komea-jiraclient
+project.scm.org.komea.jiraclient\:jira-client.url=https\://github.com/RaphaelTocea/jira-client.git
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-project.scm.org.komea.jiraclient\:jira-client.connection=https\://github.com/RaphaelTocea/org-komea-jiraclient
+project.scm.org.komea.jiraclient\:jira-client.connection=scm\:git\:https\://github.com/RaphaelTocea/jira-client.git
 exec.additionalArguments=-Psonatype-oss-release -P nexus
 exec.snapshotReleasePluginAllowed=false
-completedPhase=scm-commit-release
-project.rel.org.komea.jiraclient\:jira-client=0.6.0
+completedPhase=end-release
+project.rel.org.komea.jiraclient\:jira-client=0.6.1
