--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.komea.jiraclient</groupId>
     <artifactId>jira-client</artifactId>
-    <version>0.6.0</version>
+    <version>0.6.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>jira-client</name>
@@ -34,7 +34,8 @@
   <developerConnection>scm:git:git@github.com:RaphaelTocea/jira-client.git</developerConnection>
   <url>https://github.com/RaphaelTocea/jira-client.git</url>
   <!--<tag>HEAD</tag>-->
-</scm>
+  <tag>HEAD</tag>
+  </scm>
 
 
 <!--<properties>
@@ -49,7 +50,7 @@
     <distributionManagement>
         <repository>
             <id>bintray</id>
-            <url>https://api.bintray.com/maven/RaphaelTocea/org-komea-jiraclient/jira-client</url>
+            <url>https://api.bintray.com/maven/raphael/org-komea-jiraclient/jira-client</url>
         </repository>
     </distributionManagement>
 
